@@ -5,7 +5,7 @@ all_from 'lib/UFL/Phonebook.pm';
 
 requires 'Catalyst' => '5.7006';
 requires 'Catalyst::Action::RenderView';
-requires 'Catalyst::Model::LDAP' => '0.15';
+requires 'Catalyst::Model::LDAP' => '0.16_01';
 requires 'Catalyst::Plugin::ConfigLoader';
 requires 'Catalyst::View::TT';
 requires 'Class::Accessor::Fast';
